Tiny fix to remove empty space on modal overflow section

--- a/client/multi-currency/enabled-currencies-list/style.scss
+++ b/client/multi-currency/enabled-currencies-list/style.scss
@@ -124,9 +124,7 @@
 		flex: 1;
 		display: flex;
 		flex-direction: column;
-		padding-right: 16px;
-		padding-left: 5px;
-		margin-left: -5px;
+		margin: 0 -24px -24px 0;
 	}
 
 	&__search {
